2001-02-05  Keisuke Nishida  <kxn30@po.cwru.edu>

	* dump.c, dump.h: Modified a lot.
	(SCM_DUMP_COOKIE): Version 0.1
	(scm_dump_mark): Removed.
	(scm_restore_cell_object, scm_store_cell_object): New functions.

	* smob.h (scm_smob_descriptor): Removed slots: dump_mark,
	dump_dealloc, dump_store, undump_alloc, undump_restore, undump_init.
	New slots: dump, undump.
	* smob.c (scm_make_smob_type, scm_set_smob_dump, scm_set_smob_undump):
	Updated.

	* keywords.c (keyword_dump): Renamed from keyword_dealloc.
	(keyword_undump): Renamed from keyword_alloc.
	(scm_init_keywords): Set keyword_dump and keyword_undump.

2001-02-03  Michael Livshin  <mlivshin@bigfoot.com>

	* gc.c (DOUBLECELL_ALIGNED_P): new macro, a better-named analog of
	the deprecated SCM_DOUBLE_CELLP.

	* tags.h (SCM_DOUBLE_CELLP): deprecated.

2001-02-02  Keisuke Nishida  <kxn30@po.cwru.edu>

	* dump.c, dump.h: New files.
	* Makefile.am: Added dump.c, dump.h, dump.x, dump.doc.
	* init.c: #include "libguile/dump.h".
	(scm_init_guile_1): Call scm_init_dump.
	* smob.h (scm_smob_descriptor): New slots: dump_mark,
	dump_dealloc, dump_store, undump_alloc, undump_restore,
	undump_init.
	* smob.c (scm_make_smob_type): Init the new slots.
	(scm_set_smob_dump, scm_set_smob_undump): New functions.
	* smob.h (scm_set_smob_dump, scm_set_smob_undump): Declared.

	* keywords.c: #include "libguile/dump.h".
	(keyword_dealloc, keyword_alloc): New functions.
	(scm_init_keywords): Set smob_dump and smob_undump.

2001-02-01  Keisuke Nishida  <kxn30@po.cwru.edu>

	* vectors.c (scm_c_make_vector): New function.
	* vectors.h (scm_c_make_vector): Declared.
	* eval.c (scm_copy_tree), filesys.c (scm_stat2scm), fluids.c
	(scm_make_initial_fluids, grow_fluids), gc.c (scm_init_storage),
	gh_data.c (gh_ints2scm, gh_doubles2scm): goops.c
	(scm_make_method_cache, scm_i_vector2list,
	scm_compute_applicable_methods, scm_sys_method_more_specific_p),
	init.c (start_stack), net_db.c (scm_gethost, scm_getnet,