@@ -81,8 +81,10 @@ static SCM
 keyword_undump (SCM dstate)
 {
   int len;
-  const char *mem = scm_restore_string (&len, dstate);
-  SCM sym = scm_mem2symbol (mem, len);
+  const char *mem;
+  SCM sym;
+  scm_restore_string (&mem, &len, dstate);
+  sym = scm_mem2symbol (mem, len);
   return scm_make_keyword_from_dash_symbol (sym);
 }
 
